$Id: History,v 1.9 2000-01-26 06:42:14 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Jan 26, 00, M.Asai (tag event-V01-00-01)
- Corrections for trajectories of suspended tracks
- This tag requires tracking-V01-00-01

Jan 12, 00, M.Asai (tag event-V01-00-00)
- G4EventManager becomes a singleton.
- G4EventManager keeps the pointers of all user action classes except
 run action.
- Null pointer protections are added for SetUserAction methods in
 G4EventManager and G4StackManager.

Nov 4, 99, M.Asai (tag event-V00-01-01)
- Comments are enriched for the software reference manual

Oct 4, 99, J.Allison (tag event-V00-01-00)
- Removed -I$(G4BASE)/graphics_reps/include from GNUmakefile (no
  longer necessary after G4VVisManager moved to intercoms).

Jun 7, 99, J.Allison (tag event-01-00-03)
- Trapped "G4HEPEvtInterface:: cannot open file."

Apr 15, 99 M.Asai (tag event-01-00-02)
- Catch up the changes of trajectory classes in tracking category.

Apr 09, 99 M.Asai (tag event-01-00-01)
- Change the pointer arguments in user action classes to const.

Nov 11, 98 M.Asai (tag event-00-03-04)
- Optimize G4PrimaryVertex for events such as having huge number
  of primaries.

Oct 10, 98 M.Asai (tag event-00-03-03)